2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0. 
	  Tag name: "foomatic-filters-3_0_0".

	* README, USAGE: Updated for version 3.0.0.

	* foomatic-rip.1.in: Updated linuxprinting.org link for 3.0.0.
	
2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0rc2. 
	  Tag name: "foomatic-filters-3_0_0rc2".

	* README, USAGE: Updated for version 3.0.0rc2.

	* foomatic-rip.1.in: Added missing substitutions for special
	  characters in postpipe.
	
2003-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: added restriction for allowed strings by means
	  of lists of allowed characters (PPD keyword:
	  '*FoomaticRIPOptionAllowedChars <option>: "..."') and Perl
	  regular expressions (PPD: '*FoomaticRIPOptionAllowedRegExp
	  <option>: "..."'). The allowed characters are checked by a
	  '/^[...]*$/' expression in the Perl scripts, so ranges with '-',
	  forbidden characters with a leading '^', or special characters
	  as '\w', '\d', '\x07', ...  are allowed. Regular expressions are
	  applied via a '/.../' expression. These restrictions are done
	  for security reasons, to avoid for example a string like "|| rm
	  -rf * ||" in a command line option.

	  The string 'None' is always mapped to the empty string,
	  as PPD files and the command of some spoolers do not accept an
	  empty string as argument value.

	  Several bug fixes done for the string options.
	
2003-04-13  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0rc1. 
	  Tag name: "foomatic-filters-3_0_0rc1".

	* README, USAGE: Updated for version 3.0.0rc1.

2003-04-12  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Introduced string and password options.

2003-04-07  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Currently, the renderer is re-started whenever