@@ -1,3 +1,9 @@
+2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* foomatic-rip.in: Let "echo" commands in the renderer command line
+	  being replaced by $myecho, so that printing on non-GNU systems with
+	  user-selected GNU "echo" command works.
+
 2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* *: Tagged CVS for the release of foomatic-filters 3.0.0. 
